--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
 <body>
       <div class="navbarheader" >
-        <div class="row"  style=" height: 7vh;box-shadow: 11px -9px 3px 9px #888888;background-color: hsla(0, 0%, 97%, 0.9490196078431372);"  data-aos="fade-down" data-aos-anchor="#aboutus" data-aos-anchor-placement="top-top">
+        <div class="row"  style=" height: 7vh;box-shadow: 11px -9px 3px 9px #888888;background-color: #232121"  data-aos="fade-down" data-aos-anchor="#aboutus" data-aos-anchor-placement="top-top">
             <div class="col-lg-1 col-md-1 col-sm-1 col-xs-2" style="width:15%;height: 100%; " >
-                <img src="headerlogo.png" style="height: 100%;cursor: pointer;padding:2%;">
+                <img src="headerlogo1.png" style="height: 100%;cursor: pointer;padding:2%;">
 
             </div>
             <div  class="col-lg-10 col-md-10 col-sm-10 col-xs-9 navbar-content"  data-aos="fade-left" data-aos-anchor="#aboutus" data-aos-anchor-placement="top-top">
@@ -62,9 +62,7 @@
     <script src="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.js"></script>
     <script>
         AOS.init({
-
             duration: 1200
-
         });
     </script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
