--- a/index.html
+++ b/index.html
@@ -51,12 +51,43 @@
 
     
     
-        <div class="about" id="aboutus">
+         <div class="about" id="aboutus">
+        <div style="height:100vh;margin-top:10%;margin-bottom:2%;">
+
+            <div class="row" data-aos="fade-up" data-aos-anchor="#aboutus" data-aos-anchor-placement="top-center">
+
+                <div id="aboutbutton" class="col-lg-offset-1 col-md-offset-1 col-sm-offset-1 col-xs-offset-1  col-lg-2 col-md-3 col-sm-5 col-xs-5 circle">
+                    <p>ABOUT ME</p>
+                </div>
+
+            </div>
+
+            <div class="row" id="sk" data-aos="fade-down" data-aos-anchor="#aboutus" data-aos-anchor-placement="top-center"> 
+
+                <div id="skillsbutton" class="col-lg-offset-3 col-md-offset-4 col-sm-offset-6 col-xs-offset-5 col-lg-2 col-md-3 col-sm-5 col-xs-6 circle ">
+                    <p>SKILLS</p>
+                </div>
+
+            </div>
+
+            <div class="row" id="sk1" data-aos="fade-right" data-aos-anchor="#sk" data-aos-anchor-placement="top-center">
+
+                <div id="projectbutton" class="col-lg-offset-1 col-md-offset-1  col-sm-offset-1 col-xs-offset-1 col-lg-2 col-md-3 col-sm-5 col-xs-5 circle">
+                    <p>PROJECT</p>
+                </div>
+
+            </div>
+            <div class="row" data-aos="fade-left" data-aos-anchor="#sk" data-aos-anchor-placement="top-center">
+                <div class="col-lg-offset-3 col-md-offset-4 col-sm-offset-6 col-xs-offset-6 col-lg-2 col-md-3 col-sm-5 col-xs-5 circle">
+                    <p>CONTACT</p>
+                </div>
+            </div>
 
         </div>
-        <div  id="about">
+    </div>
+    <div id="work">
 
-        </div>
+    </div>
 
  
     <script src="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.js"></script>
