--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <img src="headerlogo1.png" style="height: 100%;cursor: pointer;padding:2%;">
 
             </div>
-            <div class="col-lg-10 col-md-10 col-sm-10 col-xs-9 navbar-content" data-aos="fade-left" data-aos-anchor="#aboutus" data-aos-anchor-placement="top-center">
+            <div class="col-lg-10 col-md-10 col-sm-10 col-xs-9 navbar-content" >
 
                 <button type="button" class="btn btn-default  navbar-button">ContactUs</button>
 
