--- a/index.html
+++ b/index.html
@@ -71,13 +71,13 @@
 
             <div class="row" id="sk1" >
 
-                <div id="projectbutton" data-aos="fade-right" data-aos-anchor="#sk" data-aos-anchor-placement="top-center" class="col-lg-offset-1 col-md-offset-1  col-sm-offset-1 col-xs-offset-1 col-lg-2 col-md-3 col-sm-5 col-xs-5 circle">
+                <div id="projectbutton" data-aos="fade-down" data-aos-anchor="#sk" data-aos-anchor-placement="top-center" class="col-lg-offset-1 col-md-offset-1  col-sm-offset-1 col-xs-offset-1 col-lg-2 col-md-3 col-sm-5 col-xs-5 circle">
                     <p>PROJECT</p>
                 </div>
 
             </div>
             <div class="row" >
-                <div  data-aos="fade-left" data-aos-anchor="#sk" data-aos-anchor-placement="top-center" class="col-lg-offset-3 col-md-offset-4 col-sm-offset-6 col-xs-offset-6 col-lg-2 col-md-3 col-sm-5 col-xs-5 circle">
+                <div  data-aos="fade-up" data-aos-anchor="#sk" data-aos-anchor-placement="top-center" class="col-lg-offset-3 col-md-offset-4 col-sm-offset-6 col-xs-offset-6 col-lg-2 col-md-3 col-sm-5 col-xs-5 circle">
                     <p>CONTACT</p>
                 </div>
             </div>
