--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
                 <div id="skillsbutton" class="col-lg-offset-3 col-md-offset-4 col-sm-offset-5 col-offset-5 col-lg-2 col-md-3 col-sm-4 col-6 circle ">
 
-                    <div class="aboutbutton-header"><img src="Software4.png"></div>
+                    <div class="aboutbutton-header"><img src="software4.png"></div>
                     <div class="about-header-title">
                         <p>Software Development</p>
                     </div>
